fixed inline padding on mobile

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -4,7 +4,7 @@
 
   align-items: start;
 
-  padding: 56px 0;
+  padding-block: 56px;
   background-color: #1C1A26;
 
   &__logo-link {
